[gd_scene load_steps=10 format=3 uid="uid://b7epu6wqif7en"]

[ext_resource type="Script" path="res://Scripts/Menus/instruction_panel.gd" id="1_t5gg0"]
[ext_resource type="Texture2D" uid="uid://fximv773aanl" path="res://Assets/Sprites/Instructions/1.png" id="2_l4v58"]
[ext_resource type="FontFile" uid="uid://vvsrycc23x0w" path="res://Assets/Text Fonts/CenturyGothic.ttf" id="3_ct65i"]
[ext_resource type="FontFile" uid="uid://dh1or6jgu5dia" path="res://Assets/Text Fonts/Gameplay.ttf" id="4_opwa8"]
[ext_resource type="StyleBox" uid="uid://cnhmoydrn3voe" path="res://Styles/ButtonPressed.tres" id="5_6bdey"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_okv3a"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tuj48"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_070tl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_km8k3"]

[node name="InstructionPanel" type="CanvasLayer"]
script = ExtResource("1_t5gg0")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Control"]
custom_minimum_size = Vector2(800, 500)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -250.0
offset_right = 400.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_okv3a")

[node name="TextureRect" type="TextureRect" parent="Control/Panel"]
custom_minimum_size = Vector2(500, 250)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -261.5
offset_top = 75.0
offset_right = 261.5
offset_bottom = 348.0
grow_horizontal = 2
texture = ExtResource("2_l4v58")
expand_mode = 2

[node name="Label" type="Label" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 158.0
offset_top = 122.0
offset_right = 158.0
offset_bottom = 172.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.606618, 0.682971)
theme_override_fonts/font = ExtResource("3_ct65i")
theme_override_font_sizes/font_size = 40
text = "TEST DESCRIPTION"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PrevBtn" type="Button" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 13.0
offset_top = -57.0
offset_right = 163.0
offset_bottom = -12.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_opwa8")
theme_override_font_sizes/font_size = 31
text = "PREV
"

[node name="NextBtn" type="Button" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -159.0
offset_top = -56.0
offset_right = -9.0
offset_bottom = -11.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_opwa8")
theme_override_font_sizes/font_size = 31
text = "NEXT"

[node name="StartBtn" type="Button" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -114.5
offset_top = -33.0
offset_right = 114.5
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_ct65i")
theme_override_font_sizes/font_size = 26
theme_override_styles/focus = SubResource("StyleBoxEmpty_tuj48")
theme_override_styles/hover = SubResource("StyleBoxEmpty_070tl")
theme_override_styles/pressed = ExtResource("5_6bdey")
theme_override_styles/normal = SubResource("StyleBoxEmpty_km8k3")
text = "PRESS ANY KEY TO START"

[connection signal="pressed" from="Control/Panel/PrevBtn" to="." method="_on_prev_btn_pressed"]
[connection signal="pressed" from="Control/Panel/NextBtn" to="." method="_on_next_btn_pressed"]
[connection signal="pressed" from="Control/Panel/StartBtn" to="." method="_on_start_btn_pressed"]
